- Added book and user book partial implementations - Refactored google books api and mapper implementations